
subprojects {
   apply plugin: "java"
   apply plugin: "groovy"
   apply plugin: "maven"
   apply plugin: "eclipse"

   group="com.googlecode.tawus"
   version="0.022-SNAPSHOT"
   sourceCompatibility = '1.5'

   targetCompatibility = '1.5'
   configurations {
      provided
      deployerJars
   }

   // See http://jira.codehaus.org/browse/GRADLE-784

   sourceSets {
      main {
         compileClasspath += configurations.provided
      }
      test {
         compileClasspath += configurations.provided
         runtimeClasspath += configurations.provided
      }
    }

   task testng(type:Test) {
      useTestNG()
      options.suites("src/test/conf/testng.xml")
      maxHeapSize = "400M"
      systemProperties["tapestry.service-reloading-enabled"] = "false"
      jvmArgs("-XX:MaxPermSize=512m")
      logging.captureStandardOutput LogLevel.INFO 
      getLogging().setLevel(LogLevel.INFO) 

   }

   test { useJUnit(); }

   repositories {
     mavenCentral()
     mavenRepo urls: "http://m2repo.spockframework.org/snapshots"
     mavenRepo urls: "http://repository.jboss.org/nexus/content/groups/public-jboss/"
   }

    task sourcesJar(type: Jar, dependsOn:classes) {
       classifier = 'sources'
       from sourceSets.main.allSource
    }

    artifacts {
       archives sourcesJar
    }

  
   dependencies {
     groovy "org.codehaus.groovy:groovy-all:1.7.4"
     testCompile 'org.testng:testng:5.10:jdk15@jar'
     testCompile "org.easymock:easymock:2.5.2"
     testCompile "log4j:log4j:1.2.14"
     compile "org.slf4j:slf4j-api:1.6.1"
     compile "org.slf4j:slf4j-log4j12:1.6.1"
     testCompile "org.spockframework:spock-core:0.4-groovy-1.7"
     testCompile "junit:junit:4.8.1"  
   }
}
subprojects.each { evaluationDependsOn(it.name) }

task clean(type: Delete) {
  delete buildDirName
}
